--- a/docs/zh/guide/deploy.mdx
+++ b/docs/zh/guide/deploy.mdx
@@ -25,7 +25,7 @@ bun wrangler d1 create rin
 这就是最终的命令
 :::
 
-打开仓库页面：https://github.com/OXeu/Rin
+打开仓库页面：https://github.com/openRin/Rin
 
 ## Fork
 
